tests/ui/parse/missing_semi.stderr
error[RX0008]: expected `;`, found `let`
 --> $DIR/parse/missing_semi.rx:3:15
  |
3 |     let x = 1 let y = 2; //~ ERROR RX0008
  |               ^^^ expected `;`
