tests/ui/parse/missing_semi.rx
//@ spec: RXS-0024, RXS-0030
fn f() {
    let x = 1 let y = 2; //~ ERROR RX0008
}
